--- a/mystylesheets.css
+++ b/mystylesheets.css
@@ -1,17 +1,17 @@
 *{
-  margain:0;
+  margin:0;
   
 }
 
 html,body{
-  background-image: url("https://thumbs.dreamstime.com/b/computer-laptop-black-screen-hot-coffee-cup-wooden-table-top-blurred-pool-beach-background-business-concept-83207822.jpg")  ;
+  background-image: url("http://www.pptbackgrounds.org/uploads/the-beauty-of-sunset-backgrounds-wallpapers.jpg")  ;
   background-size: cover;
   width:100%;
 }
 
 .mainheading{
   text-align:center;
-  color:Red;
+  color:Navy;
 }
 
 ul li a {
@@ -20,7 +20,7 @@ ul li a {
 }
   
   ul{
-    height:30%;
+    height:22%;
     Width:100%;
     background:#97d6f7;
     text-align: center;
@@ -33,7 +33,7 @@ ul li{
 position: relative;  
 margin-left:130px;
 transform:translate(20%,30%);
-font-size:26px;
+font-size:22px;
 
 
 }
