--- a/mystylesheets.css
+++ b/mystylesheets.css
@@ -12,6 +12,8 @@ html,body{
 .mainheading{
   text-align:center;
   color:Navy;
+font-size:200px;
+  
 }
 
 ul li a {
@@ -40,6 +42,6 @@ font-size:22px;
 
 ul li a:hover{
   color:pink;
-  background:Blue;
-  padding:3%;
+  background:pink;
+  padding:1%;
 }
