--- a/Interests/int_pages.css
+++ b/Interests/int_pages.css
@@ -1,17 +1,42 @@
 #section1{
-Background-color: rgb(127,255,212);
+background: url("https://www.thefrenchcellar.sg/wp-content/uploads/2015/06/bastilleday.jpg") no-repeat center fixed;
+background-size: cover;
 }
 
 #section2{
-Background-color: rgb(138,43,226);
+background: url("https://gapyear.s3.amazonaws.com/images/made/images/advertiser_files/Sunset_in_Dublin__582_387.jpg") no-repeat center fixed;
+background-size: cover;
 }
 
 #section3{
-Background-color: rgb(102,51,153);
+background: url("https://upload.wikimedia.org/wikipedia/commons/5/5f/Shanghai_skyline_at_daytime%2C_panoramic._China%2C_East_Asia.jpg") no-repeat center fixed;
+background-size: cover;
 }
 
+#section4{
+background: url("https://upload.wikimedia.org/wikipedia/en/thumb/8/83/Salesforce_logo.svg/1200px-Salesforce_logo.svg.png") no-repeat center fixed;
+background-size: cover;
+}
+
+#section5{
+background: url("https://d1u5p3l4wpay3k.cloudfront.net/lolesports_gamepedia_en/f/fd/Cloud9.png?version=c5dd84c2c341690624f02ffae164b945") no-repeat center fixed;
+background-size: cover;
+}
+
+#section6{
+background: url("https://targetjobs.co.uk/sites/targetjobs.co.uk/files/public/field_ad_org_logo/amazon.png") no-repeat center fixed;
+background-size: cover;
+}
+
+#section7{
+background: url("https://www.digitalunite.com/sites/default/files/images/Screen%20Shot%202012-11-28%20at%207.53.48%20AM.png") no-repeat center fixed;
+background-size: cover;
+}
+
+
 .section{
-    text-align: center;
-    color: white;
-    top: 20%;
+    color: black;
+    font-family: courier;
+
+   
 }
