--- a/Interests/int_pages.css
+++ b/Interests/int_pages.css
@@ -4,12 +4,12 @@ background-size: cover;
 }
 
 #section2{
-background: url("https://travelercomment.com/wp-content/uploads/2016/05/GreatWall2.jpg") no-repeat center fixed;
+background: url("http://www.backyardtravel.com/wp-content/uploads/2015/08/Landscape_Daytime_Hongkong_China1000x600.jpg") no-repeat center fixed;
 background-size: cover;
 }
 
 #section3{
-background: url("https://holeinthedonut.com/wp-content/uploads/2014/08/Ireland-Dublin-Spire-of-Dublin-on-OConnell-Street.jpg") no-repeat center fixed;
+background: url("https://19623-presscdn-pagely.netdna-ssl.com/wp-content/uploads/2015/11/ios-off-season.jpg") no-repeat center fixed;
 background-size: cover;
 }
 
