--- a/mystylesheets.css
+++ b/mystylesheets.css
@@ -5,6 +5,7 @@
 
 h1 {
       font-family: courier;
+      text-align: center;
 
 }
 .mainheading{
@@ -12,6 +13,18 @@ h1 {
   color:Navy;
 font-size:40px;
   
+}
+
+h2 {
+   text-align: center;
+}
+
+h3 {
+   text-align: center;
+}
+
+div {
+   text-align: center;
 }
 
 ul li a {
